src/components/button.module.css
.button {
  border: 0;
  cursor: pointer;
  color: #ffffff;
  font-size: 5ch;
  font-size: 18px;
  background-color: #62bfad;
  border: 0px;
  border-radius: 10px;
  width: 100%;
  padding: 12px;
}

.button:focus {
  outline: none;
  margin: inherit;
  border: inherit;
  display: inherit;
  -webkit-align-content: inherit;
  -webkit-animation-delay: inherit;
  -webkit-animation-fill-mode: inherit;
  -webkit-animation-timing-function: inherit;
  -webkit-box-decoration-break: inherit;
}

